# langfuse-mcp

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  MANIFEST.in  README.md  SECURITY.md  debug_langfuse.py  langfuse-mcp.code-workspace  langfuse_traces_summary.md  pyproject.toml  run-langfuse-mcp.sh  run_tests.py  scripts_print_first_trace_lines.py  setup.py  test_client.py  test_langfuse_mcp.py  test_mcp_client.py
.cursor/rules/: langfuse-mcp-general-rules.mdc
.github/: CODEOWNERS  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: publish.yml  test.yml
examples/: README.md  langfuse_client_demo.py  scripts_print_first20_compact.py  scripts_print_trace_first20.py  scripts_print_trace_from_dump.py  scripts_trace_count_7d.py
langfuse_mcp/: __init__.py  __main__.py
tests/: README.md  __init__.py  fakes.py  test_basic.py  test_client.py  test_main.py  test_mcp_integration.py  test_tools.py
